# jiggle_version

./: .bandit  .env_example  .gitignore  .jiggle_version.config  .pre-commit-config.yaml  .pylintrc  .pynt  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  ChangeLog  MANIFEST.in  Makefile  Pipfile  Pipfile_nodev  README.md  README.rst  SECURITY.md  basic_checks.sh  build.py  build_utils.py  detect-secrets-results.txt  freeze_man.sh  gl.sh  jiggle_version_self.py  make_prompt.sh  mypy.ini  notes_for_mypyc.md  pipx_installs.sh  publish.sh  pylintrc.ini  pyproject.toml  req_graph.txt  requirements-dev.txt  requirements.txt  requirements_for_safety.txt  setup.cfg  setup.py  stress_test.py  tox.ini
.config/: .flake8  .license_rules  .pylintrc  .pylintrc_scripts  .pylintrc_test  .pynt  .yamllint  requirements-dev.txt  requirements.txt  requirements_for_safety.txt
.github/workflows/: build.yml  create_draft_release.yml  publish_pycodetags_to_pypi.yml  publish_to_pypi.yml  release.yml  zizmor.yml
.github_dead_code/: publish.yml
.prospector/: jiggle_version_style.yaml
dead_code/: Pipfile  build.py  build_old.py  build_utils.py  notes_for_mypyc.md  setup.cfg  setup.py
dead_code/navio/: __main__.py
dead_code/navio/builder/: _nb.py
dead_code/navio/builder/tests/: test_nb.py
dead_code/navio/builder/tests/build_scripts/: annotation_misuse_1.py  annotation_misuse_2.py  annotation_misuse_3.py  build_with_params.py  default_task_and_import_dependencies.py  dependencies.py  options.py  runtime_error.py  simple.py
docs/: CODE_OF_CONDUCT.md  design_philosophy.md  prior_art.md  todo.md
docs/source/: conf.py  index.rst  modules.rst
docs/sphinx/: init.sh  make.bat
docs/sphinx/source/: jiggle_version.rst
docs/usage_example/: usage.py
fetch_raw_data/: .gitignore  bump_all.py  bump_all_directly.py  decomp.sh  pypi_versions.py
historical/jiggle_version/: __init__.py  file_inventory.py  find_version_class.py  jiggle_class.py  utils.py
historical/jiggle_version/parse_package/: find_version_by_package.py
historical/jiggle_version/parse_python/: __init__.py
historical/jiggle_version/parse_version/: parse_dunder_version.py
historical/test/: test_damanged_versions.py  test_find_by_ast.py  test_main.py  test_parse_dunder_version.py  test_parse_kwarg_version.py  test_version_schemes.py  test_x_package_finder.py  test_zcentral_module_finder.py
jiggle_version/: __about__.py  __init__.py  __main__.py  __version__.py  _version.py  auto.py  bump.py  central_module_finder.py  commands.py  config.py  discover.py  file_inventory.py  file_makers.py  file_opener.py  find_modules_function.py  find_version_by_package.py  find_version_class.py  git.py  gitignore.py  is_this_okay.py  jiggle_class.py  main.py  module_finder.py  package_info_finder.py  parse_dunder_version.py  parse_kwarg_version.py  pep440.py  project_finder.py  pypi.py  schema_guesser.py  schemes.py  update.py  utils.py  version_lint.py
jiggle_version/parse_package/: __init__.py  find_version_by_package.py  package_info_finder.py
jiggle_version/parse_python/: __init__.py  is_this_okay.py
jiggle_version/parse_version/: __init__.py  parse_dunder_version.py  parse_kwarg_version.py  schema_guesser.py
jiggle_version/parsers/: ast_parser.py  config_parser.py
jiggle_version/utils/: cli_suggestions.py  console.py  files.py  logging_config.py
jiggle_version/vendorized/: pep440.py
jiggle_version/vendorized/versio/: comparable_mixin.py  version.py  version_scheme.py
navio/builder/: _nb.py
navio/builder/tests/: test_nb.py
navio/builder/tests/build_scripts/: build_with_params.py  runtime_error.py
navio_tasks/: cli_commands.py  settings.py  utils.py
navio_tasks/commands/: cli_get_secrets.py  cli_pytest.py
reports/: line_counts.txt  sonar-unit-test-results.xml
sample_lib/: __init__.py  __version__.py
sample_projects/double_module/: execise_foo.py  setup.py
sample_projects/double_module/bar/: .gitignore
sample_projects/dupes_in_dunders/dupes/: __init__.py  __version__.py
sample_projects/file_module_src/: file_module.py  setup.py
sample_projects/file_module_ver_in_file/: exercise_me.py  file_module.py  setup.py
sample_projects/sample_src/: .gitignore  a.py  setup.cfg  setup.py
sample_projects/sample_src/sample_lib/: __init__.py  __version__.py
sample_projects/setup_only/: setup.py
sample_projects/ver_in_weird_file/: conf.py  setup.cfg  setup.py  setup_helpers.py
sample_projects/ver_in_weird_file/ver_in_weird_file/: smtp.py
sample_projects/with_unlikely_modules/: setup.cfg  setup.py
sample_src/: setup.py
sample_src/sample_lib/: __init__.py  __version__.py
scripts/: basic_checks.sh  integration_test.sh  make_prompt.sh  make_source.sh
spec/: vnext.md
test/: go.sh  test_auto.py  test_command_line.py  test_config.py  test_damanged_versions.py  test_discover.py  test_discover_permission.py  test_find_by_ast.py  test_find_version.py  test_git.py  test_gitignore.py  test_hypothesis_properties.py  test_jiggle_class.py  test_main.py  test_parse_dunder_version.py  test_parse_kwarg_version.py  test_pep440.py  test_schema_guesser.py  test_schemes.py  test_taggint.py  test_update.py  test_version_schemes.py  test_x_package_finder.py  test_zcentral_module_finder.py  tox_banner.py
test/sample_lib/: __init__.py  __version__.py
test/test_parsers/: test_ast_parser.py  test_ast_parser_encoding.py  test_config_parser.py
test/test_strings/: test_pep440.py  test_version_schemes.py
usage_example/: usage.py
usage_example/single_module_example/: __init__.py
versio/: README.md  comparable_mixin.py  version.py  version_scheme.py
