[metadata]
name = jiggle_version
version=1.0.68

[flake8]
# formatting controlled by black. black always wins.
ignore=E722,W503,E126,E122,E131,E203,B001
max-line-length = 120
enable-extensions=G
exclude=tests/*

[isort]
default_section=THIRDPARTY
force_grid_wrap=0
include_trailing_comma=True
known_first_party=example,example_utils
line_length=88
multi_line_output=3
use_parentheses=True
